fix: button gap

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ h1 {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
+  gap: 0.5rem;
 }
 
 button {
@@ -64,6 +64,7 @@ button {
   }
   button {
     padding: 0.5rem 2rem;
-    font-size: 1rem;
+    gap: 2rem;
+    font-size: 2rem;
   }
 }
